Button on landing page successfully fades and redirects to arts index page Other changes to arts show page and testing of data pulled form mock data. Does not work properly. Waiting on Ellery to complete API to go back to working on Art's show page

--- a/project.config.json
+++ b/project.config.json
@@ -37,13 +37,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "art_detail",
 					"pathName": "pages/art_details/art_details",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "Arts Index Page",
+					"pathName": "pages/arts/arts"
 				}
 			]
 		}
