Galleries Index Page From Landing page directed to index page of galleries. Need to implement WeChat authorization and have list of galleries only shown to users who scanned that QR code Also created redirect to gallery show page but needs to change html to pull from gallery mock data api

--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
@@ -48,7 +48,13 @@
 				{
 					"id": -1,
 					"name": "Arts Index Page",
-					"pathName": "pages/arts/arts"
+					"pathName": "pages/arts/arts",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "Galleries Index Page",
+					"pathName": "pages/galleries/galleries"
 				}
 			]
 		}
