--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/galleries/galleries",
+    "pages/show_gallery/show_gallery",
     "pages/arts/arts",
     "pages/art_details/art_details",
     "pages/logs/logs"
