some design update

--- a/app.json
+++ b/app.json
@@ -11,6 +11,6 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#647480",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"f0f0f0"
   }
 }
