--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -47,14 +47,9 @@
 				},
 				{
 					"id": -1,
-					"name": "Arts Index Page",
-					"pathName": "pages/arts/arts",
-					"query": ""
-				},
-				{
-					"id": -1,
 					"name": "Galleries Index Page",
-					"pathName": "pages/galleries/galleries"
+					"pathName": "pages/galleries/galleries",
+					"query": ""
 				}
 			]
 		}
