--- a/project.config.json
+++ b/project.config.json
@@ -37,12 +37,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "Galleries Index Page",
 					"pathName": "pages/galleries/galleries",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "arts",
+					"pathName": "pages/arts/arts",
 					"query": ""
 				}
 			]
