Added wx.setnavigationBarTitle to show_gallery.js file on line 27. When user clicks on gallery from index page, the title  is now displayed in gallery show page.

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#647480",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "",
     "navigationBarTextStyle":"f0f0f0"
   }
 }
