--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/show_gallery/show_gallery",
     "pages/arts/arts",
     "pages/art_details/art_details",
+    "pages/show_artists/show_artists",
     "pages/logs/logs"
   ],
   "window":{
