--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -49,6 +49,12 @@
 					"id": -1,
 					"name": "arts",
 					"pathName": "pages/arts/arts",
+					"query": ""
+				},
+				{
+					"id": 2,
+					"name": "Show Artists",
+					"pathName": "pages/show_artists/show_artists",
 					"query": ""
 				}
 			]
