--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/arts/arts",
     "pages/art_details/art_details",
     "pages/show_artists/show_artists",
+    "pages/enter_pin/enter_pin",
     "pages/logs/logs"
   ],
   "window":{
