--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -50,6 +50,11 @@
 					"name": "Show Artists",
 					"pathName": "pages/show_artists/show_artists",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "Pin page",
+					"pathName": "pages/enter_pin/enter_pin"
 				}
 			]
 		}
