WeChat requires navigationBarText Style to be black or white. It is not set to white.

--- a/app.json
+++ b/app.json
@@ -15,6 +15,6 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#647480",
     "navigationBarTitleText": "",
-    "navigationBarTextStyle":"f0f0f0"
+    "navigationBarTextStyle":"white"
   }
 }
